Use external_tenant in the API
