# app/models/endpoint.rb
@@ -1,12 +1,10 @@
 class Endpoint < ApplicationRecord
-  belongs_to :tenant
+  include TenancyConcern
   belongs_to :source
 
   has_many   :authentications, :as => :resource
 
   validates :role, :uniqueness => { :scope => :source_id }
-
-  acts_as_tenant(:tenant)
 
   def base_url_path
     URI::Generic.build(:scheme => scheme, :host => host, :port => port, :path => path).to_s
